<resources>

    //PRINCIPAL PAGE
    <string name="app_name">PokemonGolot</string>
    <string name="ready_adventure">Are you ready for the adventure?</string>

    //WELCOME PAGE
    <string name="welcome">Welcome</string>
    <string name="have_account">I have an account</string>

    //REGISTER PAGE
    <string name="date_birth">Date of birth</string>
    <string name="country">Country</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="email">Email</string>
    <string name="create_account">Create an account</string>
    <string name="accept_conditions">Accept conditions and terms</string>

    //LOGIN PAGE
    <string name="login">Login</string>


    //GENDER
    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>

    </string-array>

</resources>