<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        tools:context=".CreateAnAccount">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="160dp"
            android:layout_height="174dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pichu" />

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="325dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/candal"
            android:gravity="center_horizontal"
            android:text="@string/name"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <EditText
            android:id="@+id/nameInsert"
            android:layout_width="321dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="#FFE500"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameLabel"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/usernameLabel"
            android:layout_width="325dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/candal"
            android:gravity="center_horizontal"
            android:text="@string/username"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameInsert" />

        <EditText
            android:id="@+id/usernameInsert"
            android:layout_width="321dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="#FFE500"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameLabel"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="325dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/candal"
            android:gravity="center_horizontal"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameInsert" />



        <EditText
            android:id="@+id/passwordInsert"
            android:layout_width="321dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="#FFE500"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingLeft="25dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLabel"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/repeatpasswordLabel"
            android:layout_width="325dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/candal"
            android:gravity="center_horizontal"
            android:text="@string/repeat_password"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInsert" />

        <EditText
            android:id="@+id/repeatpasswordInsert"
            android:layout_width="321dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="#FFE500"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeatpasswordLabel"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="325dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/candal"
            android:gravity="center_horizontal"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeatpasswordInsert" />

        <EditText
            android:id="@+id/emailInsert"
            android:layout_width="321dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="#FFE500"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingLeft="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailLabel"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/birthdateLabel"
            android:layout_width="325dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/candal"
            android:gravity="center_horizontal"
            android:text="@string/date_birth"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInsert" />

        <EditText
            android:id="@+id/birthdateInsert"
            android:layout_width="321dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="#FFE500"
            android:ems="10"
            android:inputType="date"
            android:importantForAutofill="no"
            android:paddingLeft="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthdateLabel" />

        <TextView
            android:id="@+id/genderLabel"
            android:layout_width="325dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/candal"
            android:gravity="center_horizontal"
            android:text="Gender"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthdateInsert" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genderLabel">

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="Male"
                android:textColor="#FFF"
                app:buttonTint="#FFFFFF" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="Female"
                android:textColor="#FFF"
                app:buttonTint="#FFFFFF" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/termsconditionsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_marginTop="20dp"
            android:text="@string/accept_conditions"
            android:textColor="#FFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/createaccountButton"
            android:layout_width="270dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="#FFE500"
            android:onClick="startRegister"
            android:text="@string/create_account"
            android:textColor="#040404"
            android:textSize="22sp"
            app:backgroundTint="#FFE500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/termsconditionsCheckBox"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>